--- a/app/css/style.css
+++ b/app/css/style.css
@@ -64,10 +64,18 @@ a {
     margin-right: 20px !important;
 }
 
+.navbar .user-b{
+    margin-left: 20px;
+}
+
 @media (max-width: 767.98px) {
     .navbar-brand {
         letter-spacing: 2px;
         font-size: 16px !important;
+    }
+
+    .navbar .user-b{
+        margin-left: -15px !important;
     }
 }
 
@@ -550,6 +558,19 @@ a {
     color: #fff;
 }
 
+.detail-image{
+    width: 100%;
+    height: 400px;
+    background-size: cover;
+    border-radius: 20px;
+}
+
+.book-club-card-det .event-picture img{
+    width: 100%;
+    height: 190px;
+    border-radius: 10px;
+}
+
 @media (max-width: 767.98px) {}
 
 @media (max-width: 768px) {}
@@ -662,4 +683,18 @@ a {
 
 #ForgotPassword{
     display: none;
+}
+
+/* book club page */
+.book-club-card{
+    width: 320px !important;
+    height: 380px !important;
+    border: none !important;
+    margin: auto;
+}
+.book-club-card img{
+    width: 320px;
+    height: 210px;
+    background-size: cover;
+    margin-bottom: 10px;
 }
