--- a/app/css/style.css
+++ b/app/css/style.css
@@ -440,6 +440,14 @@ a {
     outline: none !important;
 }
 
+.pagination {
+    border: none !important;
+}
+.pagination .page-item{
+    margin: 0px 10px;
+    border-radius: 0px !important;
+}
+
 @media (max-width: 767.98px) {
     .modal-body .image img {
         width: 150px;
@@ -571,6 +579,12 @@ a {
     border-radius: 10px;
 }
 
+.gallery .gallery-image img{
+    height: 220px;
+    width: 100%;
+   object-fit: cover;
+}
+
 @media (max-width: 767.98px) {}
 
 @media (max-width: 768px) {}
@@ -697,4 +711,9 @@ a {
     height: 210px;
     background-size: cover;
     margin-bottom: 10px;
+}
+
+.pagination{
+    /* border: 1px solid #FFC107; */
+    border-radius: 0px !important;
 }
